--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.1.37",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "reset-css": "^4.0.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
