--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.1.37",
+    "gatsby-plugin-styled-components": "^3.0.7",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "reset-css": "^4.0.1",
