--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.1.37",
     "gatsby-plugin-styled-components": "^3.0.7",
+    "polished": "^3.4.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "reset-css": "^4.0.1",
