--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.1.37",
+    "gatsby": "^2.13.57",
+    "gatsby-image": "^2.2.8",
+    "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sharp": "^2.2.11",
     "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-source-filesystem": "^2.1.9",
+    "gatsby-transformer-sharp": "^2.2.6",
     "polished": "^3.4.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-helmet": "^5.2.1",
     "reset-css": "^4.0.1",
     "styled-components": "^4.1.3"
   },
